--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <video class="video-slide" src="./video/3.mp4" autoplay muted loop></video>
             <video class="video-slide" src="./video/4.mp4" autoplay muted loop></video>
             <video class="video-slide" src="./video/7.mp4" autoplay muted loop></video>
-            <video class="video-slide" src="./video/7.mp4" autoplay muted loop></video>
+        <//video class="video-slide" src="./video/5.mp4" autoplay muted loop></video>
 
             <div class="content active">
                 <h1>Your physical & Mental health Solution<br></h1>
