--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="content active">
                 <h1 class="title">Your physical & Mental health Solution<br></h1>
                 <p>"Strenght doesn't come from what you can do<br> it comes from overcoming the things you once <br>thought you couldn't."<br></p>
-                <a href="#section__container price__container">Join Us Now</a>
+                <a href="index5.html">Join Us Now</a>
             </div>
             <div class="content">
                 <h1>Make your body fit & Perfect<br></h1>
