--- a/index5.html
+++ b/index5.html
@@ -11,7 +11,7 @@
            <div class="register-box">
             <div class="register">
                
-               <form action="https://formsubmit.co/davidteko15@gmail.com" method="POST">
+               <form action="https://formsubmit.co/cgsaregister@gmail.com" method="POST">
                 <h3>MEMBER'S PARTICULAR</h3><br>
                 <div class="input-row">
                     <diV class="input-group">
