--- a/index.html
+++ b/index.html
@@ -177,20 +177,20 @@
                     <img src="./images/back.png" id="backBtn">
                 <diV class="gallery">
                   <div>
-                    <span><img src="./images/_DSC4918.jpg"></span>
-                    <span><img src="./images/_DSC4826.jpg"></span>
-                    <span><img src="./images/_DSC4927.jpg"></span>
+                    <span><img src="./images/20.jpg"></span>
+                    <span><img src="./images/2.jpg"></span>
+                    <span><img src="./images/3.jpg"></span>
                     <span><img src="./images/14.jpg"></span>
-                    <span><img src="./images/_DSC5051.jpg"></span>
+                    <span><img src="./images/5.jpg"></span>
                     <span><img src="./images/17.jpg"></span>
                   </div>
                   <div>
-                    <span><img src="./images/_DSC4848.jpg"></span>
-                    <span><img src="./images/_DSC5095.jpg"></span>
+                    <span><img src="./images/6.jpg"></span>
+                    <span><img src="./images/8.jpg"></span>
                     <span><img src="./images/11.jpg"></span>
-                    <span><img src="./images/_DSC4944.jpg"></span>
-                    <span><img src="./images/_DSC5018.jpg"></span>
-                    <span><img src="./images/_DSC4886.jpg"></span>
+                    <span><img src="./images/9.jpg"></span>
+                    <span><img src="./images/1.jpg"></span>
+                    <span><img src="./images/12.jpg"></span>
                   </div>
                 </diV>
                     <img src="./images/next.png" id="nextBtn">
@@ -221,7 +221,7 @@
                              <a href="#" class="btn">Join Us Now</a>
                             </div>
                             <div class="image">
-                              <img src="./images/_DSC4939.jpg">
+                              <img src="./images/18.jpg">
                             </div>
                         </div>
                         </div>
@@ -247,7 +247,7 @@
                                      <a href="#" class="btn">Join Us Now</a>
                                     </div>
                                     <div class="image">
-                                      <img src="./images/_DSC5018.jpg">
+                                      <img src="./images/1.jpg">
                                     </div>
                                 </div>
                                 </div>  
