--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style6.css">
         <link rel="stylesheet" href="style7.css">
         <link rel="stylesheet" href="style8.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-abc123..." crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -325,6 +326,18 @@
                     </div>
                 </div>
             </section>
+            <section id="load-shedding-schedule">
+                  <div id="header">
+                  <h1 class="section__header">LOADSHEDDING</h1>
+                  <p>
+                      This section on the website provide our members with the loadshedding schedule for this week.
+                      During these times there will be no light at the gym, resulting in the gym being closed 
+                      in that 2hr period.
+                  </p>
+                  </div>
+              <h2> WEEKLY SCHEDULE</h2>
+              <div id="schedule"></div>
+          </section>
             <footer>
               <div class="container-fluid">
                   <div class="row">
@@ -365,6 +378,7 @@
           </footer>
               
         <script src="./app.js"></script>
+        <script src="./script.js"></script>
         <script>
           let scrollContainers = document.querySelectorAll(".gallery");
           let backBtn = document.getElementById("backBtn");
