--- a/index.html
+++ b/index.html
@@ -178,20 +178,29 @@
                     <img src="./images/back.png" id="backBtn">
                 <diV class="gallery">
                   <div>
+                    
                     <span><img src="./images/20.jpg"></span>
                     <span><img src="./images/2.jpg"></span>
                     <span><img src="./images/3.jpg"></span>
-                    <span><img src="./images/14.jpg"></span>
+                    <span><img src="./images/21.jpg"></span>
                     <span><img src="./images/5.jpg"></span>
                     <span><img src="./images/17.jpg"></span>
                   </div>
                   <div>
-                    <span><img src="./images/6.jpg"></span>
+                    <span><img src="./images/22.jpg"></span>
                     <span><img src="./images/8.jpg"></span>
                     <span><img src="./images/11.jpg"></span>
                     <span><img src="./images/9.jpg"></span>
                     <span><img src="./images/1.jpg"></span>
                     <span><img src="./images/12.jpg"></span>
+                  </div>
+                  <div>
+                    <span><img src="./images/14.jpg"></span>
+                    <span><img src="./images/6.jpg"></span>
+                    <span><img src="./images/7.jpg"></span>
+                    <span><img src="./images/3.jpg"></span>
+                    <span><img src="./images/20.jpg"></span>
+                    <span><img src="./images/9.jpg"></span>
                   </div>
                 </diV>
                     <img src="./images/next.png" id="nextBtn">
